--- a/vue3/package.json
+++ b/vue3/package.json
@@ -7,11 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
+    "bootstrap": "^5.1.0",
     "vue": "^3.2.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
+    "sass": "^1.39.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.2",
     "vue-tsc": "^0.2.2"
